# soziasign-tsl-recognition-and-translation

./: README.md
tsl-recognition/: pyproject.toml
tsl-recognition/configs/: environment.yml  recognition_train.yml
tsl-recognition/scripts/: aggregate_ablation.py  run_ablation.py
tsl-recognition/src/: __init__.py  __main__.py  augmentation.py  config.py  convert_landmarks.py  dataset.py  evaluate.py  extraction.py  inference.py  landmarks.py  main.py  split.py  train.py  validate.py  visualization.py
tsl-recognition/src/datasets/: __init__.py  autsl.py  base.py  bosphorus.py
tsl-recognition/src/models/: __init__.py  gru.py
tsl-recognition/src/preprocessing/: __init__.py  landmark_interpolation.py
tsl-recognition/tests/: test_recognition_smoke.py
tsl-recognition/tsl_recognition/: __init__.py  __main__.py  cli.py  config.py
tsl-recognition/tsl_recognition/dataset/: __init__.py  augmentation.py  autsl.py  base.py  bosphorus.py  interpolation.py  loader.py  registry.py  split.py
tsl-recognition/tsl_recognition/evaluation/: __init__.py  evaluate.py  inference.py  train.py  validate.py  visualization.py
tsl-recognition/tsl_recognition/extraction/: __init__.py  landmarks.py  pipeline.py
tsl-translation/: pyproject.toml  requirements.txt
tsl-translation/config/: prompts.py
tsl-translation/configs/: translation_bench.yml
tsl-translation/data/processed/: train.jsonl  (+1 more)
tsl-translation/experiments/: REPORT.json
tsl-translation/gloss_to_text/: __init__.py  utils.py
tsl-translation/scripts/: prepare_data.py
tsl-translation/src/: base_model_bench.py  gemini_judge.py  prepare_data.py  rag_bench.py  run_baselines.sh  run_bench.sh  run_bench_tr.sh  run_rag.sh  unified_bench.py  unified_bench_tr.py
tsl-translation/tests/: test_translation_smoke.py
(+32 files in other folders)
