[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsl-recognition"
version = "1.0.0"
description = "GRU-based Turkish Sign Language recognition pipeline"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "tqdm>=4.65",
    "scikit-learn>=1.3",
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "seaborn>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
tsl-recognition = "tsl_recognition.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tsl_recognition*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
