[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsl-translation"
version = "1.0.0"
description = "Gloss-to-text translation pipeline for Turkish Sign Language"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "peft>=0.10",
    "trl>=0.8",
    "datasets>=2.18",
    "evaluate>=0.4",
    "bitsandbytes>=0.43",
    "accelerate>=0.24",
    "sentence-transformers>=2.6",
    "google-generativeai>=0.5",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["gloss_to_text*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
